--- a/style.scss
+++ b/style.scss
@@ -82,6 +82,7 @@ header{
         width: 46%; 
         margin: 1%;
             img{
+              object-fit: cover;
                 aspect-ratio:9/16;
                 width:100%;               
             }
