--- a/_variables.scss
+++ b/_variables.scss
@@ -1,5 +1,5 @@
 // _variables.scss
 
-$lightGray: lightgray;
+$lightGray: rgb(243, 239, 239);
 $white: white;
 $buttonHoverColor: rgb(235, 200, 206);
