--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 header {
-  background-color: lightgray;
+  display: flex;
+  background-color: rgb(243, 239, 239);
+}
+header .filters-header {
+  margin: 2px;
+  border: none;
+  background: none;
+  font-size: 20px;
+}
+header .filters-header:hover {
+  color: rgb(235, 200, 206);
+}
+header .fas {
+  margin: 10px;
+  font-size: 20px;
+}
+header .fa-heart {
+  display: none;
+}
+header .fa-user {
+  display: none;
 }
 header nav {
   width: 100%;
@@ -7,18 +27,15 @@ header nav {
   display: flex;
   justify-content: center;
   align-content: center;
-  background-color: lightgray;
+  background-color: rgb(243, 239, 239);
 }
 header nav h1 {
-  position: absolute;
-  margin-top: 15px;
-  left: 2%;
-  font-size: 15px;
+  font-size: 20px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 header nav ul {
   list-style: none;
-  display: flex;
+  display: none;
 }
 header nav ul li {
   padding-right: 10px;
@@ -28,15 +45,50 @@ header nav ul li a {
   text-decoration: none;
 }
 
+.sub-header {
+  padding: 5px;
+  text-align: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.sub-nav {
+  margin: 5px;
+}
+.sub-nav a {
+  text-decoration: none;
+  color: black;
+}
+.sub-nav a:focus {
+  color: beige;
+}
+
+.num-of-items {
+  text-align: center;
+}
+
+.refine {
+  padding: 5px;
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+
 .bar {
+  margin: 2px;
   display: flex;
 }
 .bar h2 {
   margin: auto;
 }
 .bar #filters {
-  margin-bottom: 5px;
+  display: none;
+  margin: 2px;
   border: none;
+  background: none;
 }
 .bar #filters:hover {
   color: rgb(235, 200, 206);
@@ -48,15 +100,40 @@ header nav ul li a {
   float: left;
 }
 .container .boxes {
+  padding: 15px;
   display: none;
-  border: 2px solid black;
   position: absolute;
   width: 70%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.5);
-  margin: 10px;
+  background-color: white;
   z-index: 2;
   right: 0%;
+  top: 0%;
+}
+.container .boxes .top-box #clear {
+  background-color: white;
+  position: absolute;
+  right: 20%;
+  margin: 5px;
+}
+.container .boxes .top-box #done {
+  position: absolute;
+  right: 5%;
+  margin: 5px;
+  background-color: black;
+  color: white;
+}
+.container .boxes .top-box #sort {
+  position: relative;
+  width: 100%;
+  height: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.container .boxes span i {
+  position: absolute;
+  right: 5%;
+  margin: 5px;
 }
 .container .pictures {
   margin-top: 10px;
@@ -64,41 +141,84 @@ header nav ul li a {
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.container .pictures figure {
+.container .pictures .custom-card {
   box-sizing: border-box;
   width: 46%;
   margin: 1%;
 }
-.container .pictures figure img {
+.container .pictures .custom-card img {
   -o-object-fit: cover;
      object-fit: cover;
   aspect-ratio: 9/16;
   width: 100%;
 }
-.container .pictures figure figcaption {
+.container .pictures .custom-card .card-description {
   text-align: center;
 }
-.container .pictures figure button {
-  width: 100%;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: black;
-  background: none;
-  border: 1px solid lightgray;
+.container .pictures .custom-card .num {
+  position: relative;
+  top: -65%;
+  left: 30%;
+  font-size: 100px;
+  color: white;
+  height: 40px;
 }
-.container .pictures figure button:hover {
-  background-color: rgb(235, 200, 206);
+
+.lower-content {
+  display: flex;
+  width: 100%;
+}
+.lower-content p {
+  display: inline;
+  text-align: start;
+}
+.lower-content .show-more {
+  width: 50%;
+  margin: auto;
+  padding: 5px;
+  font-size: 20px;
+  text-align: center;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+}
+
+.icons {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+}
+.icons li {
+  font-size: 20px;
+  margin: 5px;
 }
 
 footer {
   width: 100%;
-  margin: 2px;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  background-color: lightgray;
+  background-color: rgb(243, 239, 239);
 }
-footer ul {
+footer .lists {
+  display: grid;
+  grid-template-columns: 20% 20% 20% 40%;
+}
+footer .lists ul {
   list-style: none;
+}
+footer .lists ul input[type=submit] {
+  background-color: black;
+  color: white;
+}
+footer .lists ul input[type=email] {
+  width: 120px;
+}
+footer .bottom-footer {
+  display: flex;
+  list-style-type: none;
+  align-items: center;
+  justify-content: center;
+}
+footer .bottom-footer li {
+  margin: 5px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -111,18 +231,52 @@ footer ul {
   }
 }
 @media only screen and (min-width: 1023px) {
+  .refine {
+    display: none;
+  }
+  .num-of-items {
+    text-align: end;
+  }
+  .bar {
+    display: flex;
+  }
+  .bar #filters {
+    margin-bottom: 5px;
+    display: block !important;
+  }
   .container .boxes {
     position: relative;
-    width: 600px;
+    width: 1000px;
     border: none;
   }
-  .container .pictures figure {
-    width: 29%;
-    margin: 1%;
-    box-sizing: border-box;
+  .container .boxes .top-box {
+    display: none;
+  }
+  .container .pictures .custom-card:nth-child(5n+1) {
+    width: 31%;
+  }
+  .container .pictures .custom-card:nth-child(5n+2) {
+    width: 31%;
+  }
+  .container .pictures .custom-card:nth-child(5n+3) {
+    width: 31%;
+  }
+  .container .pictures .custom-card:nth-child(5n+4) {
+    width: 46%;
+  }
+  .container .pictures .custom-card:nth-child(5n+5) {
+    width: 46%;
+  }
+  header .filters-header {
+    display: none;
   }
   header nav h1 {
+    position: absolute;
     font-size: 20px;
     margin: 10px;
+    left: 0;
+  }
+  header nav ul {
+    display: flex;
   }
 }/*# sourceMappingURL=style.css.map */
