--- a/style.scss
+++ b/style.scss
@@ -10,22 +10,53 @@
     background-color: $lightGray;
 }
 
-header{
-    background-color:  $lightGray;  
-    nav{     
-        @include justify();
+@mixin box-adjustment($right){
+  position: absolute;
+  right:$right;
+  margin:5px; 
+}
 
-        h1{
-            position: absolute;
-            margin-top:15px;
-            left:2%;
-            font-size: 15px;
+@mixin button-style{
+  margin:2px;
+  border:none;
+  background: none;
+  &:hover{
+    color:$buttonHoverColor;
+  }
+}
+
+header{
+  display:flex;
+  background-color:  $lightGray; 
+
+    .filters-header{
+     @include button-style();
+     font-size:20px;
+    }
+    .fas{
+      margin: 10px;
+      font-size: 20px;
+    }
+
+ .fa-heart{ 
+  display: none;
+ }
+
+ .fa-user{
+  display: none;
+ }
+
+    nav{   
+      @include justify();
+
+        h1{  
+            font-size: 20px;
             font-family:Verdana, Geneva, Tahoma, sans-serif;    
         }
 
         ul{ 
             list-style: none;
-            display: flex;       
+            display: none;   //flex original    
             li{
                 padding-right: 10px;
                 a{
@@ -37,19 +68,51 @@ header{
     }
   }
 
+  .sub-header{
+    padding:5px;
+    text-align: center;
+    border-top:1px solid black;
+    border-bottom:1px solid black;
+  }
+
+  .sub-nav{
+    margin:5px;
+
+    a{
+      text-decoration: none;
+      color:black;
+      &:focus{
+        color:beige;
+      }
+    }
+  }
+
+  .num-of-items{
+    text-align: center;
+  }
+
+  .refine{
+    padding:5px;
+    width:100%;
+    font-size:20px;
+    text-align: center;
+    background-color: $white;
+    color:black;
+    border:2px solid black;
+
+  }
+
   .bar{
+   margin:2px;
    display: flex;
+
    h2{
-   margin: auto;
+   margin:auto;
    }
 
-    #filters{   
-        margin-bottom: 5px;
-        border: none;
-        //background: none;  
-        &:hover{
-            color:$buttonHoverColor;
-        } 
+    #filters{ 
+     display:none;  
+     @include button-style();
     }
   }
 
@@ -59,15 +122,42 @@ header{
     float:left;
        
     .boxes{
+     padding:15px;
      display: none;
-     border:2px solid black;
      position: absolute;
      width:70%;
      height:100%;
-     background-color: rgba($color: $white, $alpha: 0.5);
-     margin:10px;
+     background-color:$white;
      z-index: 2;
      right:0%;
+     top: 0%;
+     .top-box{
+      #clear{
+        background-color: $white;
+        @include box-adjustment(20%);
+        
+      }  
+      #done{
+        @include box-adjustment(5%);
+        background-color: black;
+        color: $white;
+        
+      } 
+      #sort{
+       position: relative;
+       width:100%;
+       height:30px;
+       margin-top:15px;
+       margin-bottom: 15px;
+       
+      }
+    }
+    span{   
+      i{
+        @include box-adjustment(5%);
+      }
+    }
+   
     }
 
     .pictures{  
@@ -77,7 +167,7 @@ header{
       justify-content: space-between;
         
         
-       figure{
+       .custom-card{
         box-sizing: border-box;
         width: 46%; 
         margin: 1%;
@@ -86,32 +176,81 @@ header{
                 aspect-ratio:9/16;
                 width:100%;               
             }
-            figcaption{
+            .card-description{
                 text-align: center;
             }
-            button{
-                width:100%;
-                font-family: Verdana, Geneva, Tahoma, sans-serif;
-                color: black;
-                background:none;
-                border: 1px solid $lightGray;
-                &:hover{
-                    background-color: $buttonHoverColor;
-                }
-            }
+            .num{
 
-            
-            
+            position:relative;
+            top:-65%;
+            left:30%;
+            font-size: 100px;
+            color:$white;
+            height:40px;
+            }
        } 
     }
   }
 
-footer{
+  .lower-content{
+    display:flex;
+    width:100%;
     
-    @include justify(); 
+    
+    p{
+      display: inline;
+      text-align: start;
+    }
+    .show-more{
+     width:50%;
+      margin:auto;
+      padding:5px;
+      font-size:20px;
+      text-align: center;
+      background-color: $white;
+      color:black;
+      border:2px solid black;  
+    }
+  }
+  .icons{
+    list-style-type: none;
+    display:flex;
+    justify-content: center;
+    li{
+      font-size:20px;
+      margin:5px;
+    }
+   
+  }
+
+footer{
+
+ width:100%;
+ background-color:$lightGray;
+  .lists{
+    display:grid;
+    grid-template-columns: 20% 20% 20% 40%;
     ul{
-        list-style: none;
-    } 
+      list-style: none;
+      input[type="submit"]{
+        background-color: black;
+        color:white;
+      }
+      input[type="email"]{
+        width:120px;
+      }
+  } 
+  }
+   
+    .bottom-footer{
+      display:flex;
+      list-style-type: none;
+      align-items: center;
+      justify-content: center;
+      li{
+        margin:5px;
+      }
+    }
 }
 
 
@@ -132,26 +271,69 @@ footer{
   }
   
   @include breakpoint(large) {
+
+    .refine{
+      display:none;
+    }
+    .num-of-items{
+      text-align: end;
+    }
+    .bar{
+      display:flex;
+      #filters{
+        margin-bottom: 5px;
+        display:block!important;
+        
+      }
+    }
+
     .container {
       .boxes {   
         position: relative;  
-        width: 600px;
+        width: 1000px;
         border: none;
+        .top-box{display: none;}
       }
+     
       .pictures {
-        figure {
-          width: 29%;
-          margin: 1%;
-          box-sizing: border-box;
-        } 
-      }
-    } 
+        .custom-card {
+          $columns: 3; // Number of columns in odd rows
+          $evenColumns: 2; // Number of columns in even rows
+          $totalColumns: $columns + $evenColumns;
+          $currentRow: 0;
+      
+          @for $i from 1 through $totalColumns {
+            $width: 31%; // Default width for odd rows
+            @if $i > $columns {
+              $width: 46%; // Change width for even rows
+            }
+      
+            &:nth-child(#{$totalColumns}n + #{$i}) {
+              width: $width;
+            }
+          }
+  }
+}
+    }
+      
     header {
+      .filters-header{
+        display:none
+      }
+
       nav {
         h1 {
+          position:absolute;
           font-size: 20px;
           margin: 10px;
+          left:0;
+        }
+        ul{
+          display:flex;
         }
       }
     }
   }
+ 
+  
+  
