--- a/style.scss
+++ b/style.scss
@@ -267,6 +267,11 @@ footer{
         }
       }
     }
+    .bar{
+      h2{
+        margin:10px;
+      }
+    }
   }
   
   @include breakpoint(large) {
@@ -279,6 +284,10 @@ footer{
     }
     .bar{
       display:flex;
+      h2{
+        margin: auto;
+      }
+      
       #filters{
         margin-bottom: 5px;
         display:block!important;
