--- a/style.scss
+++ b/style.scss
@@ -1,387 +1,373 @@
-@import 'variables';
-@import 'breakpoint';
+@import "variables";
+@import "breakpoint";
 
-@mixin justify{
-    width: 100%;
+@mixin justify {
+  width: 100%;
 
-    display:flex;
-    justify-content: center;
-    align-content: center;
-    background-color: $lightGray;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  background-color: $lightGray;
 }
 
-@mixin box-adjustment($right){
+@mixin box-adjustment($right) {
   position: absolute;
-  right:$right;
-  margin:5px; 
+  right: $right;
+  margin: 5px;
 }
 
-@mixin button-style{
-  margin:2px;
-  border:none;
+@mixin button-style {
+  margin: 2px;
+  border: none;
   background: none;
-  &:hover{
-    color:$buttonHoverColor;
+  &:hover {
+    color: $buttonHoverColor;
   }
 }
-body{
+body {
   margin: 0px;
   #overlay {
-     position: fixed;
-    top: 0;
+    position: fixed;
+    top: 0; 
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: none;
     z-index: 1;
-}
+  }
 }
 
-header{
-  display:flex;
+header {
+  display: flex;
   align-items: center;
   justify-content: center;
-  background-color:  $lightGray; 
+  background-color: $lightGray;
 
-    .filters-header{
-     @include button-style();
-     font-size:20px;
-    }
-    .fas{
-      margin: 10px;
-      font-size: 20px;
-    }
+  .filters-header {
+    @include button-style();
+    font-size: 20px;
+  }
+  .fas {
+    margin: 10px;
+    font-size: 20px;
+  }
 
-  .fa-heart{ 
+  .fa-heart {
     display: none;
-   }
+  }
 
- .fa-user{
-  display: none;
- }
+  .fa-user {
+    display: none;
+  }
 
+  nav {
+    @include justify();
 
-    nav{   
-      @include justify();
-
-        h1{  
-            font-size: 20px;
-            font-family:Verdana, Geneva, Tahoma, sans-serif;    
-        }
-
-        ul{ 
-            list-style: none;
-            display: none;   //flex original    
-            li{
-                padding-right: 10px;
-                a{
-                    color:black;
-                    text-decoration: none;
-                }
-            }
-        }
+    h1 {
+      font-size: 20px;
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-  }
 
-  .sub-header{
-    padding:5px;
-    text-align: center;
-    border-top:1px solid black;
-    border-bottom:1px solid black;
-  }
-
-  .sub-nav{
-    margin:5px;
-
-    a{
-      text-decoration: none;
-      color:black;
-      &:focus{
-        color:beige;
+    ul {
+      list-style: none;
+      display: none; //flex original
+      li {
+        padding-right: 10px;
+        a {
+          color: black;
+          text-decoration: none;
+        }
       }
     }
   }
+}
 
-  .num-of-items{
-    text-align: center;
-  }
+.sub-header {
+  padding: 5px;
+  text-align: center;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
 
-  .refine{
-    padding:5px;
-    width:100%;
-    font-size:20px;
-    text-align: center;
-    background-color: $white;
-    color:black;
-    border:2px solid black;
+.sub-nav {
+  margin: 5px;
 
-  }
-
-  .bar{
-   margin:2px;
-   display: flex;
-
-   h2{
-   margin:auto;
-   }
-
-    #filters{ 
-     display:none;  
-     @include button-style();
+  a {
+    text-decoration: none;
+    color: black;
+    &:focus {
+      color: beige;
     }
   }
+}
 
-  .container{ 
+.num-of-items {
+  text-align: center;
+}
+
+.refine {
+  padding: 5px;
+  width: 100%;
+  font-size: 20px;
+  text-align: center;
+  background-color: $white;
+  color: black;
+  border: 2px solid black;
+}
+
+.bar {
+  margin: 2px;
+  display: flex;
+
+  h2 {
+    margin: auto;
+  }
+
+  #filters {
+    display: none;
+    @include button-style();
+  }
+}
+
+.container {
+  background-color: $white;
+  display: flex;
+  float: left;
+
+  .boxes {
+    padding: 15px;
+    display: none;
+    position: absolute;
+    width: 70%;
+    height: 100%;
     background-color: $white;
-    display: flex;
-    float:left;
-       
-    .boxes{
-     padding:15px;
-     display: none;
-     position: absolute;
-     width:70%;
-     height:100%;
-     background-color:$white;
-     z-index: 2;
-     right:0%;
-     top: 0%;
-     .top-box{
-      #clear{
+    z-index: 2;
+    right: 0%;
+    top: 0%;
+    .top-box {
+      #clear {
         background-color: $white;
         @include box-adjustment(20%);
-        
-      }  
-      #done{
+      }
+      #done {
         @include box-adjustment(5%);
         background-color: black;
         color: $white;
-        
-      } 
-      #sort{
-       position: relative;
-       width:100%;
-       height:30px;
-       margin-top:15px;
-       margin-bottom: 15px;
-       
+      }
+      #sort {
+        position: relative;
+        width: 100%;
+        height: 30px;
+        margin-top: 15px;
+        margin-bottom: 15px;
       }
     }
-    span{   
-      i{
+    span {
+      i {
         @include box-adjustment(5%);
       }
     }
-   
-    }
-
-    .pictures{  
-        margin-top: 10px; 
-        display: flex;
-       flex-wrap: wrap;  
-      justify-content: space-between;
-        
-        
-       .custom-card{
-        box-sizing: border-box;
-        width: 46%; 
-        margin: 1%;
-            img{
-              object-fit: cover;
-                aspect-ratio:9/16;
-                width:100%;               
-            }
-            .card-description{
-                text-align: center;
-            }
-            .far{
-              position: relative;
-              top:-90%;
-              left:85%;
-              font-size: 20px;
-             height:5px;
-
-            }
-            .num{
-            position:relative;
-            top:-65%;
-            left:35%;
-            font-size: 100px;
-            color:$white;
-            height:2px;
-            width:10px;
-            }
-       } 
-    }
   }
 
-  .lower-content{
-    display:flex;
-    width:100%;
-    
-    p{
-      display: inline;
-      text-align: start;
-    }
-    .show-more{
-     width:50%;
-      margin:auto;
-      padding:5px;
-      font-size:20px;
-      text-align: center;
-      background-color: $white;
-      color:black;
-      border:2px solid black;  
-    }
-  }
-  .icons{
-    list-style-type: none;
-    display:flex;
-    justify-content: center;
-    li{
-      font-size:20px;
-      margin:5px;
-    }
-   
-  }
+  .pictures {
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
-footer{
+    .custom-card {
+      box-sizing: border-box;
+      width: 46%;
+      margin: 1%;
+      img {
+        object-fit: cover;
+        aspect-ratio: 9/16;
+        width: 100%;
+      }
+      .card-description {
+        text-align: center;
+      }
+      .far {
+        position: relative;
+        top: -90%;
+        left: 85%;
+        font-size: 20px;
+        height: 5px;
+      }
+      .num {
+        position: relative;
+        top: -65%;
+        left: 35%;
+        font-size: 100px;
+        color: $white;
+        height: 2px;
+        width: 10px;
+      }
+    }
+  }
+}
+
+.lower-content {
+  display: flex;
+  width: 100%;
+
+  p {
+    display: inline;
+    text-align: start;
+  }
+  .show-more {
+    width: 50%;
+    margin: auto;
+    padding: 5px;
+    font-size: 20px;
+    text-align: center;
+    background-color: $white;
+    color: black;
+    border: 2px solid black;
+  }
+}
+.icons {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  li {
+    font-size: 20px;
+    margin: 5px;
+  }
+}
+
+footer {
   overflow-x: hidden;
 
- width:100%;
- background-color:$lightGray;
-  .lists{
-    display:grid;
+  width: 100%;
+  background-color: $lightGray;
+  .lists {
+    display: grid;
     grid-template-columns: 20% 20% 20% 40%;
-    ul{
+    ul {
       list-style: none;
-      input[type="submit"]{
+      input[type="submit"] {
         background-color: black;
-        color:white;
-        width:auto;
+        color: white;
+        width: auto;
       }
-      input[type="email"]{
-       width: auto;
-      }
-      
-  } 
-  }
-   
-    .bottom-footer{
-      display:flex;
-      list-style-type: none;
-      align-items: center;
-      justify-content: center;
-      li{
-        margin:5px;
+      input[type="email"] {
+        width: auto;
       }
     }
-}
+  }
 
+  .bottom-footer {
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    justify-content: center;
+    li {
+      margin: 5px;
+    }
+  }
+}
 
 @include breakpoint(medium) {
-    .container {
-      .boxes {     
-        width: 50%;
-        right: 0%;
-      }
-    } 
-    header {
-      nav {
-        h1 {
-          font-size: 15px;
-        }
-      }
+  .container {
+    .boxes {
+      width: 50%;
+      right: 0%;
     }
-    .bar{
-      h2{
-        margin:10px;
+  }
+  header {
+    nav {
+      h1 {
+        font-size: 15px;
       }
     }
   }
-  
-  @include breakpoint(large) {
-    body{
-      overflow-x: hidden;
+  .bar {
+    h2 {
+      margin: 10px;
     }
-    .refine{
-      display:none;
-    }
-    .num-of-items{
-      text-align: end;
-    }
-    .bar{
-      display:flex;
-      h2{
-       margin: auto;
-       transform: translateX(-50%);
-       
-      }
-      
-      #filters{
-        margin-bottom: 5px;
-        display:block!important;
-        
-      }
-    }
-
-    .container {
-      .boxes {   
-        position: relative;  
-        width: 1000px;
-        border: none;
-        .top-box{display: none;}
-      }
-     
-      .pictures {
-        .custom-card {
-          $columns: 3; // Number of columns in odd rows
-          $evenColumns: 2; // Number of columns in even rows
-          $totalColumns: $columns + $evenColumns;
-          $currentRow: 0;
-      
-          @for $i from 1 through $totalColumns {
-            $width: 31%; // Default width for odd rows
-            @if $i > $columns {
-              $width: 46%; // Change width for even rows
-            }
-      
-            &:nth-child(#{$totalColumns}n + #{$i}) {
-              width: $width;
-            }
-          }
-          .far{
-            display: none;
-          }
   }
 }
-    }
-      
-    header {
-      .filters-header{
-        display:none
-      }
-      .fa-heart{
-        display: inline;
-      }
-      .fa-user{
-        display: inline;
-      }
 
-      nav {
-        h1 {
-          position:absolute;
-          font-size: 20px;
-          margin: 10px;
-          left:0;
+@include breakpoint(large) {
+  body {
+    overflow-x: hidden;
+  }
+  .refine {
+    display: none;
+  }
+  .num-of-items {
+    text-align: end;
+  }
+  .bar {
+    display: flex;
+    h2 {
+      margin: auto;
+      transform: translateX(-50%);
+    }
+
+    #filters {
+      margin-bottom: 5px;
+      display: block !important;
+    }
+  }
+
+  .container {
+    .boxes {
+      position: relative;
+      width: 1000px;
+      border: none;
+      .top-box {
+        display: none;
+      }
+    }
+
+    .pictures {
+      .custom-card {
+        $columns: 3; // Number of columns in odd rows
+        $evenColumns: 2; // Number of columns in even rows
+        $totalColumns: $columns + $evenColumns;
+        $currentRow: 0;
+
+        @for $i from 1 through $totalColumns {
+          $width: 31%; // Default width for odd rows
+          @if $i > $columns {
+            $width: 46%; // Change width for even rows
+          }
+
+          &:nth-child(#{$totalColumns}n + #{$i}) {
+            width: $width;
+          }
         }
-        ul{
-          display:flex;
+        .far {
+          display: none;
         }
       }
     }
   }
- 
-  
-  
+
+  header {
+    .filters-header {
+      display: none;
+    }
+    .fa-heart {
+      display: inline;
+    }
+    .fa-user {
+      display: inline;
+    }
+
+    nav {
+      h1 {
+        position: absolute;
+        font-size: 20px;
+        margin: 10px;
+        left: 0;
+      }
+      ul {
+        display: flex;
+      }
+    }
+  }
+}
